--- a/src/components/CreateTask.css
+++ b/src/components/CreateTask.css
@@ -7,6 +7,10 @@
 }
 .add-task .add-task-btn{
     text-transform: none;
+    border-radius: 0px;
+    background-color: white;
+    border:2px solid blue;
+    width:200px
 }
 .task-description label{
     font-weight: bold;
